--- a/.editorconfig
+++ b/.editorconfig
@@ -260,3 +260,7 @@ dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 dotnet_style_predefined_type_for_member_access = true:silent
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
+indent_size = 4
+tab_width = 4
+end_of_line = crlf
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
