--- a/src/CleanArchitecture.Data/CleanArchitecture.Infrastructure.csproj
+++ b/src/CleanArchitecture.Data/CleanArchitecture.Infrastructure.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
   <ItemGroup>
