--- a/src/CleanArchitecture.API/appsettings.json
+++ b/src/CleanArchitecture.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=../../db.sqlite;"
+  },
+  "EmailSettings": {
+    "FromAddress": "test@gmail.com",
+    "ApiKey": "",
+    "FromName": "Admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
