--- a/src/CleanArchitecture.API/appsettings.json
+++ b/src/CleanArchitecture.API/appsettings.json
@@ -1,11 +1,18 @@
 {
   "ConnectionStrings": {
-    "Sqlite": "Data Source=../../db.sqlite;"
+    "StreamerConnectionString": "Data Source=../../streamer.sqlite;",
+    "IdentityConnectionString": "Data Source=../../identity.sqlite;"
   },
   "EmailSettings": {
     "FromAddress": "test@gmail.com",
     "ApiKey": "",
     "FromName": "Admin"
+  },
+  "JwtSettings": {
+    "Key": "837ac013-8bc8-4b8c-a5b5-57e4181a760e",
+    "Issuer": "nameofokjaIssuer",
+    "Audience": "nameofokjaAudience",
+    "DurationInMinutes":  360
   },
   "Logging": {
     "LogLevel": {
